# conduit-protocol

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: codec.rs  error.rs  frame.rs  lib.rs  opcode.rs  parser.rs  traits.rs  types.rs
src/parser/: codec.rs  header.rs
src/protocol/: codec.rs  header.rs
