[package]
name = "conduit-protocol"
version = "0.1.0"
edition = "2021"
description = """
Network protocol for Conduit, an in-memory database backed by a key-value store.
"""
repository = "https://github.com/dark-fusion/conduit-protocol"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
bitflags = "1"
bytes = "1"
nom = "7"
tokio-util = { version = "0.7", features = ["codec"] }
tz-rs = "0.6"

[dev-dependencies]
rand = "0.8"
tokio = { version = "1", default-features = false, features = ["macros", "net", "rt-multi-thread", "test-util"] }

[profile.dev]
# Decrease compilation times during development
split-debuginfo = "unpacked"
