[package]
name = "conduit-protocol"
version = "0.1.0"
edition = "2021"
description = """
High-performance, memory-safe and fault-tolerant byte-oriented communication
protocol over TCP. The protocol is designed to provide the low-level networking
for an in-memory database backed by a key-value store.
"""
repository = "https://github.com/dark-fusion/conduit-protocol"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
bytes = "1"
thiserror = "1"
tokio-util = { version = "0.7", features = ["codec"] }
tz-rs = "0.6"

#[dev-dependencies.tokio]
#version = "1"
#default-features = false
#features = ["io-util", "macros", "net", "rt-multi-thread", "rt", "signal", "test-util"]

[profile.dev]
# Decrease compilation times during development on MacOS
split-debuginfo = "unpacked"
