[package]
name = "amalgam"
version = "0.1.0"
edition = "2021"
description = """
Primitive and structural type definitions for Lucy.
"""
repository = "https://github.com/dark-fusion/amalgam"
license = "MIT"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
bytes = "1.1.0"
tokio = { version = "1.19.2", features = ["full"] }

[profile.bench]
debug = true
lto = true
codegen-units = 1

[profile.dev]
# Disabling debug info speeds up build times during development.
# Comment out the following line to re-enable debug info.
debug = 0

[profile.release]
incremental = true
debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.
lto = true
